--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -3,14 +3,21 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
 
     <TextView
-
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:id="@+id/textTitle"
         tools:text="title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/tvTimes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        tools:text="erbole" />
 </LinearLayout>
