--- a/app/src/main/res/layout/item_pager_board.xml
+++ b/app/src/main/res/layout/item_pager_board.xml
@@ -42,9 +42,9 @@
 
     <LinearLayout
         android:id="@+id/SliderDots"
-        android:orientation="horizontal"
-        android:gravity="center_vertical|center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal" />
 
 </LinearLayout>
