--- a/app/src/main/res/drawable/edit_text_style.xml
+++ b/app/src/main/res/drawable/edit_text_style.xml
@@ -1,12 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:thickness="0dp"
     android:shape="rectangle">
-    <stroke android:width="2dp"
-        android:color="#63686C"/>
+    <stroke android:width="1dp"
+        android:color="#000000"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#FFFFFF"
-        android:endColor="#B5B5B5"
+        android:endColor="@color/white"
+        android:startColor="@color/white"
         android:type="linear"
         android:angle="270"/>
 </shape>
