--- a/app/src/main/res/drawable/nonactive_dot.xml
+++ b/app/src/main/res/drawable/nonactive_dot.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" android:useLevel="true"
     android:dither="true">
-
     <size android:width="8dp" android:height="8dp"/>
 
-    <solid android:color="#000000"/>
+    <solid android:color="#E3E2E2"/>
 
 </shape>
